@@ -1,4 +1,6 @@
 
+Dec 28, 2008: libarchive 2.6.0 released
+
 Dec 25, 2008: libarchive 2.5.905a released
 
 Dec 10, 2008: libarchive 2.5.904a released
